--- a/public/styles/scss/_nav.scss
+++ b/public/styles/scss/_nav.scss
@@ -10,7 +10,6 @@ header {
   text-transform: uppercase;
   letter-spacing: .05em;
   width: 100vw;
-  background-blend-mode: multiply;
   position: fixed;
   top: 0;
   z-index: 100;
